# spal

./: .gitignore  1  Makefile.am  align_text.sh  configure.ac  hnim  hnim.c  krathnim.c  quiz.sh
code/: agree.h  clprobe.c  encoding.c  genericOpenCL.c  hello.c  lookup3.c  opencl_programmer.c  seed.c  seed.h  spal_compile.c
code/parallel/: composition_population.cl  quiz_population.cl
documentation/: aspectTense.tex  compile.sh  compileDocumentation.sh  compiler.tex  dictionary.tex  emotions.tex  encoding.tex  grammar.tex  grammaticalCase.tex  introduction.tex  language.tex  machine_programmer.tex  mood.tex  nounClass.tex  phonology.tex  prosody.tex  spal.bbl  spal.bib  spal.css  spal.lof  spal.lot  spal.sty  spal.tex  specification.tex  tutorial.tex  vmOnOpenCL.tex
probe/: en.kwon  gramDict.h  gramDict.txt  gramWords-core.txt  hnim.po  pyac.c  pyac.h  pyac.h.gch  pyashWords.h  pyashWords.txt  translate.sh  trop.byin  trop.pya
probe/logs/seed/0.1/: log.txt
probe/po/: hnim.pot.po
probe/po/zh/: hnim.po
program/: agree.h  dialogue.c  dialogue.h  dictionary.c  encoding.c  encoding.h  genericOpenCL.c  genericOpenCL.h  lookup3.h  parser.c  parser.h  pyashWords.h  seed.c  seed.h  sort.h  spal_compile.c  spal_dictionary.c  spal_encoding.c  spal_suggest.c  spal_translation.c
